<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controlador.FormVehiculoActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/content_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivFoto"
                android:layout_width="match_parent"
                android:layout_height="@dimen/imagen"
                android:visibility="gone"
                android:scaleType="centerCrop"
                android:contentDescription="@string/foto" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_padding"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtPlaca"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/placa"
                        android:inputType="textCapCharacters" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_padding"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtMarca"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/marca"
                        android:inputType="textCapWords"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_padding"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtCosto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/costo"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_padding"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/color"
                        android:inputType="textCapWords"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_padding"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtFecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/fabricado" />
                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btnFoto"
                        android:layout_width="match_parent"
                        android:layout_marginTop="7dp"
                        android:layout_height="42dp"
                        android:layout_marginStart="2dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/foto"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/content_padding"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/swMatriculado"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/matriculado" />

                <Switch
                    android:id="@+id/swEstado"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:textSize="16sp"
                    android:clickable="false"
                    android:text="@string/estado" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/rgTipo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:checkedButton="@+id/rbAutomovil"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbAutomovil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="@string/automovil"
                    android:text="@string/automovil" />

                <RadioButton
                    android:id="@+id/rbCamioneta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="@string/camioneta"
                    android:text="@string/camioneta" />

                <RadioButton
                    android:id="@+id/rbFurgoneta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="@string/furgoneta"
                    android:text="@string/furgoneta" />
            </RadioGroup>


            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/field_margin"
                android:background="@color/colorPrimary"
                android:text="@string/guardar"/>

        </LinearLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>