<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controlador.FormReservaActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/content_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/content_padding">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtPlaca"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/placa"
                        android:inputType="textCapCharacters" />
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/btnBuscar"
                    android:layout_width="60dp"
                    android:layout_height="42dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="6dp"
                    android:layout_marginStart="@dimen/content_margin"
                    android:src="@drawable/ic_search_white_24dp"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/placa" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/llForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content_padding"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content_padding"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtCelular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/celular"
                            android:inputType="phone"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content_padding"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtPrestamo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:hint="@string/fechaPrestamo" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content_padding"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtEntrega"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:hint="@string/fechaEntrega" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/txtValor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="@dimen/field_margin"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:text="USD 359.00" />

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/field_margin"
                    android:background="@color/colorPrimary"
                    android:text="@string/guardar"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>