<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/content_margin"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civFoto"
            android:layout_width="@dimen/circle_imagen"
            android:layout_height="@dimen/circle_imagen"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/content_margin"
            android:src="@color/textPrimary" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <!--column 1-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/textPrimary" />

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="admin@mail.com"
                        android:textColor="@color/textSecondary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/celular"
                        android:textColor="@color/textPrimary" />

                    <TextView
                        android:id="@+id/tvCelular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0956768756"
                        android:textColor="@color/textSecondary" />
                </LinearLayout>

                <!--column 2-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fechaPrestamo"
                        android:textColor="@color/textPrimary" />
                    <TextView
                        android:id="@+id/tvPrestamo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="12/11/2018"
                        android:textColor="@color/textSecondary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fechaEntrega"
                        android:textColor="@color/textPrimary" />
                    <TextView
                        android:id="@+id/tvEntrega"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="12/11/2019"
                        android:textColor="@color/textSecondary" />

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tvNumero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1234"
                    android:textColor="@color/textPrimary" />


                <TextView
                    android:id="@+id/tvValor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="USD 300.50"
                    android:textColor="@color/textPrimary" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textSecondary" />

</LinearLayout>


